Double-tap to zoom is available inside print preview
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox88 | --- | verified |
People
(Reporter: emilghitta, Assigned: tnikkel)
References
Details
Attachments
(1 file)
Affected versions
- Firefox 88.0a1 (BuildId:20210316094954)
Affected platforms
- macOS 10.14
- macOS 10.15
Unaffected platforms
- Windows 10 64bit
- Ubuntu 20.04
Preconditions
- Have
apz.mac.enable_double_tap_zoom_touchpad_gesturepref enabled
Steps to reproduce
- Launch Firefox.
- Access the following link.
- Hit ctrl + p in order to open the print preview.
- Double-tap to zoom inside the print preview.
Expected result
- Double-tap to zoom is not available inside print preview or is available and zooming is performed into the desired area.
Actual result
- I’m not sure if the double-tap to zoom functionality should be available inside the print preview but here are some notes:
- Pinch to zoom is available and works correctly.
- Chrome disables the Double-tap to zoom & pinch to zoom in print preview.
- Double-tapping in order to focus a certain area inside the print preview doesn’t behave correctly in Firefox. It seems that the zoom is offset to the right.
Regression Range
- I don’t think that this is a regression.
Notes
- For further information regarding this issue, please observe the following screencast (Unfortunately the file size exceeds the bugzilla limit. Mozilla account needed).
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Chrome also doesn't allow pinch to zoom in print preview.
Probably not worth the time to debug/fix this. We can probably just disable double tap zoom in print preview, we already disable it on a per document basis for full screen docs here https://searchfox.org/mozilla-central/rev/2cc3b39bc9bb024d35e09e9c8acecf0e2dfb4e13/layout/base/ZoomConstraintsClient.cpp#223
| Assignee | ||
Comment 2•5 years ago
|
||
We shouldn't need mutation change notifications for print/preview changes as the static document bool looks to be set very early to document creation.
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Agreed that pinch-zooming can stay in the print preview. I think it's actually a good experience there. With double-tap zoom, I find it a little bit hard to control inside the small preview, so I agree on disabling it.
Comment 5•5 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 6•5 years ago
|
||
This issue is verified fixed using Firefox 88.0a1 (BuildId:20210321213736) on macOS 10.14. The double-tap to zoom functionality is not available inside the print preview.
Description
•