Bug 1698785. Don't allow double tap to zoom in print preview documents. r=botond

We shouldn't need mutation change notifications for print/preview changes as the static document bool looks to be set very early to document creation.

Differential Revision: https://phabricator.services.mozilla.com/D108731